# advent-of-code

./: Cargo.toml  README.md
2015/01-not-quite-lisp/: Cargo.toml  output.txt
2015/02-i-was-told-there-would-be-no-math/: Cargo.toml  output.txt
2015/03-perfectly-spherical-houses-in-a-vacuum/: Cargo.toml  output.txt
2015/04-the-ideal-stocking-stuffer/: Cargo.toml  output.txt
2015/05-doesnt-he-have-intern-elves-for-this/: Cargo.toml  output.txt
2015/06-probably-a-fire-hazard/: Cargo.toml  output.txt
2015/07-some-assembly-required/: Cargo.toml  output.txt
2015/08-matchsticks/: Cargo.toml  output.txt
2015/09-all-in-a-single-night/: Cargo.toml  output.txt
2015/10-elves-look-elves-say/: Cargo.toml  output.txt
2015/11-corporate-policy/: Cargo.toml
2015/12-jsabacusframework-io/: Cargo.toml
2015/13-knights-of-the-dinner-table/: Cargo.toml  output.txt
2024/01-historian-hysteria/: Cargo.toml  output.txt
2024/02-red-nose-reports/: Cargo.toml  output.txt
2024/03-mull-it-over/: Cargo.toml  output.txt
2024/04-ceres-search/: Cargo.toml  output.txt
2024/05-print-queue/: Cargo.toml  output.txt
2024/06-guard-gallivant/: Cargo.toml  output.txt
2024/07-bridge-repair/: Cargo.toml  output.txt
2024/08-resonant-collinearity/: Cargo.toml
2024/09-disk-fragmenter/: Cargo.toml  output.txt
2024/10-hoof-it/: Cargo.toml  output.txt
2024/11-plutonian-pebbles/: Cargo.toml  output.txt
2024/12-garden-groups/: Cargo.toml  output.txt
2024/13-claw-contraption/: Cargo.toml  output.txt
2024/14-restroom-redoubt/: Cargo.toml  (+1 more)
aoc/: Cargo.toml  output.txt
(+31 files in other folders)
