[workspace]
members = [
  "aoc",
  "2015/01-not-quite-lisp",
  "2015/02-i-was-told-there-would-be-no-math",
  "2015/03-perfectly-spherical-houses-in-a-vacuum",
  "2015/04-the-ideal-stocking-stuffer",
  "2015/05-doesnt-he-have-intern-elves-for-this",
  "2015/06-probably-a-fire-hazard",
  "2015/07-some-assembly-required",
  "2015/08-matchsticks",
]
resolver = "2"

[profile.release]
opt-level = 3

[workspace.package]
edition = "2021"
