[workspace]
# cSpell:disable
members = [
  "aoc",
  "2015/01-not-quite-lisp",
  "2015/02-i-was-told-there-would-be-no-math",
  "2015/03-perfectly-spherical-houses-in-a-vacuum",
  "2015/04-the-ideal-stocking-stuffer",
  "2015/05-doesnt-he-have-intern-elves-for-this",
  "2015/06-probably-a-fire-hazard",
  "2015/07-some-assembly-required",
  "2015/08-matchsticks",
  "2015/09-all-in-a-single-night",
  "2015/10-elves-look-elves-say",
  "2015/11-corporate-policy",
  "2015/12-jsabacusframework-io",
  "2015/13-knights-of-the-dinner-table",
  "2024/01-historian-hysteria",
  "2024/02-red-nose-reports",
  "2024/03-mull-it-over",
  "2024/04-ceres-search",
  "2024/05-print-queue",
]
# cSpell:enable
resolver = "2"

[profile.release]
opt-level = 3

[workspace.package]
edition = "2021"
